objects/Request_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Request Team Members</relationshipLabel>
        <relationshipName>Request_Team_Members</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Release Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF Config Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Engineer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Request Team Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RTM-{0000}</displayFormat>
        <label>Request Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>